force-app/main/default/objects/Marketing_GetFeedback_Survey__c/Marketing_GetFeedback_Survey__c.object-meta.xml
<CustomObject>
    <label>Marketing GetFeedback Survey</label>
    <nameField>
        <label>Marketing GetFeedback Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing GetFeedback Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>