force-app/main/default/objects/Marketing_GetFeedback_Survey__c/fields/Account_Management_Services_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Account_Management_Services_Satisfaction__c</fullName>
    <label>Account Management Services Satisfaction</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>