force-app/main/default/objects/Marketing_GetFeedback_Survey__c/fields/Account_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Email__c</fullName>
    <formula>Account__r.Owner.Email</formula>
    <label>Account Owner Email</label>
    <type>Text</type>
</CustomField>