force-app/main/default/objects/Marketing_GetFeedback_Survey__c/fields/Account_Owner_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_s_Email__c</fullName>
    <label>Account Owner&apos;s Email</label>
    <type>Email</type>
</CustomField>