force-app/main/default/objects/Marketing_GetFeedback_Survey__c/fields/Area_of_interest_next__c.field-meta.xml
<CustomField>
    <fullName>Area_of_interest_next__c</fullName>
    <label>Area of interest next</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Backup</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>Disaster Recovery</fullName>
            </value>
            <value>
                <fullName>Data Governance</fullName>
            </value>
            <value>
                <fullName>Ransomware</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>