force-app/main/default/objects/Marketing_GetFeedback_Survey__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Marketing GetFeedback Surveys</relationshipLabel>
    <relationshipName>Marketing_GetFeedback_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>