force-app/main/default/objects/Marketing_GetFeedback_Survey__c/fields/Customer_Support_Grade__c.field-meta.xml
<CustomField>
    <fullName>Customer_Support_Grade__c</fullName>
    <label>Customer Support Grade</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>