force-app/main/default/objects/Marketing_GetFeedback_Survey__c/fields/Record_Link__c.field-meta.xml
<CustomField>
    <fullName>Record_Link__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Enterprise_Server_URL_520, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_470)) + Id, &apos;here&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Link</label>
    <type>Text</type>
</CustomField>