force-app/main/default/objects/Marketing_GetFeedback_Survey__c/fields/Rubrik_Product_Grade__c.field-meta.xml
<CustomField>
    <fullName>Rubrik_Product_Grade__c</fullName>
    <label>Rubrik Product Grade</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>