force-app/main/default/objects/Marketing_GetFeedback_Survey__c/fields/Rubrik_Sales_Engineer_Email__c.field-meta.xml
<CustomField>
    <fullName>Rubrik_Sales_Engineer_Email__c</fullName>
    <label>Rubrik Sales Engineer Email</label>
    <type>Email</type>
</CustomField>