force-app/main/default/objects/Marketing_GetFeedback_Survey__c/fields/Satisfaction_of_Investment_Grade__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_of_Investment_Grade__c</fullName>
    <label>Satisfaction of Investment Grade</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>