force-app/main/default/objects/Marketing_GetFeedback_Survey__c/fields/Survey_Submitted_Email_Names__c.field-meta.xml
<CustomField>
    <fullName>Survey_Submitted_Email_Names__c</fullName>
    <formula>Account__r.Owner.FirstName &amp; &apos; or &apos;  &amp; Account__r.Rubrik_Sales_Engineer__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Submitted Email Names</label>
    <type>Text</type>
</CustomField>